--- a/Streamlit_app/requirements.txt
+++ b/Streamlit_app/requirements.txt
@@ -2,11 +2,8 @@
 # You can install these packages using pip. Simply run 'pip install -r requirements.txt' in your terminal.
 numpy==1.19.5
 pandas==1.2.4
-matplotlib==3.4.2
-scikit-learn==0.24.2
-tensorflow==2.5.0
-keras==2.4.3
 streamlit==0.82.0
 opencv-python-headless==4.5.2.54
-dlib==19.22.0
+onnxruntime==1.8.1
+insightface==0.1.5
 face-recognition==1.3.0
