--- a/Streamlit_app/requirements.txt
+++ b/Streamlit_app/requirements.txt
@@ -3,7 +3,7 @@
 numpy==1.19.5
 pandas==1.2.4
 streamlit==0.82.0
+streamlit-webrtc==0.16.0
 opencv-python-headless==4.5.2.54
 onnxruntime==1.8.1
 insightface==0.1.5
-face-recognition==1.3.0
